--- a/book/math_foundations/lineaire_regressie/grid.ipynb
+++ b/book/math_foundations/lineaire_regressie/grid.ipynb
@@ -48,14 +48,16 @@
                 "$$\n",
                 "\n",
                 "Dit laatste is ons _noise_ model: we gaan ervan uit dat ieder data punt een additieve ruis component heeft\n",
-                "$e_i = y_i - b_1 - b_2*x_i$ die een _normale verdeling_[^prob] volgt met gemiddelde $0$ en _standaardafwijking_ $1$.\n",
-                "Hier onthouden we de implicatie:\n",
+                "$e_i = y_i - b_1 - b_2*x_i$ met als verwachtte waarde $0$ bij een oneindig aantal observaties:\n",
                 "\n",
                 "$$\n",
-                "\\begin{align}\n",
-                "E(e_i) &= 0 \\cr\n",
-                "E(\\pmb{y}) &= \\pmb{X}\\pmb{b}\n",
-                "\\end{align}\n",
+                "E(e_i) = 0\n",
+                "$$\n",
+                "\n",
+                "Wat impliceert:\n",
+                "\n",
+                "$$\n",
+                "E(\\pmb{y}) = \\pmb{X}\\pmb{b}\n",
                 "$$\n",
                 "\n",
                 "::: {tip}\n",
@@ -1435,13 +1437,13 @@
             "id": "55d1f194",
             "metadata": {},
             "source": [
-                "Inspectie van het oppervlak is gevoelig aan de schaal van de variabelen. Het is algemeen (ook om wiskundige redenen) beter om onze variabelen te herschalen zodat hun gemiddelde $0$ is en **standaardafwijking** $1$. De **standaardafwijking is belangrijke spreidingsmaat rond het gemiddelde**. Een lage afwijking betekent dat de waarden dicht bij het gemiddelde liggen. **De standaardafwijking van een variabele of verzameling van metingen is de vierkantswortel van het gemiddelde van de gekwadrateerde verschillen ten opzicht van het gemiddelde**:\n",
+                "De inspectie van het oppervlak is gevoelig aan de schaal van de variabelen. Het is algemeen (ook om wiskundige redenen) beter om onze variabelen te herschalen zodat hun gemiddelde $0$ is en hun **standaardafwijking** gelijk aan $1$. De **standaardafwijking is een belangrijke maat van spreiding rond het gemiddelde**. **Ze wordt berekend als de vierkantswortel van het gemiddelde van de gekwadrateerde verschillen ten opzicht van het gemiddelde**:\n",
                 "\n",
                 "$$\n",
                 "STD(\\pmb{x}) = sd_x = \\sqrt{\\frac{\\sum_{i=1}^M(x_i-\\overline{\\pmb{x}})^2}{M}}\n",
                 "$$\n",
                 "\n",
-                "Een een **standaard-schaling of standaardisatie houdt in dat we een variabele of verzameling van metingen (1) _centreren_ zodat het gemiddelde** $0$ **wordt en (2) _schalen_ zodat de standaardafwijking** $1$ **wordt**:\n",
+                "Een een standaard-schaling of **_standaardisatie_ houdt in dat we een variabele of verzameling van metingen (1) _centreren_ zodat het gemiddelde** $0$ **wordt en (2) _schalen_ zodat de standaardafwijking** $1$ **wordt**:\n",
                 "\n",
                 "$$\n",
                 "\\pmb{x}_s = \\frac{\\pmb{x}-\\overline{\\pmb{x}}}{sd_x}\n",
@@ -1501,13 +1503,20 @@
                                     "yaxis": "y"
                                 },
                                 {
+                                    "boxpoints": "all",
+                                    "fillcolor": "rgba(255,255,255,0)",
+                                    "hoveron": "points",
                                     "hovertemplate": "Scaled=False<br>Order Total=%{x}<extra></extra>",
+                                    "jitter": 0,
                                     "legendgroup": "False",
+                                    "line": {
+                                        "color": "rgba(255,255,255,0)"
+                                    },
                                     "marker": {
-                                        "color": "#636efa"
+                                        "color": "#636efa",
+                                        "symbol": "line-ns-open"
                                     },
                                     "name": "False",
-                                    "notched": true,
                                     "showlegend": false,
                                     "type": "box",
                                     "x": {
@@ -1540,13 +1549,20 @@
                                     "yaxis": "y"
                                 },
                                 {
+                                    "boxpoints": "all",
+                                    "fillcolor": "rgba(255,255,255,0)",
+                                    "hoveron": "points",
                                     "hovertemplate": "Scaled=True<br>Order Total=%{x}<extra></extra>",
+                                    "jitter": 0,
                                     "legendgroup": "True",
+                                    "line": {
+                                        "color": "rgba(255,255,255,0)"
+                                    },
                                     "marker": {
-                                        "color": "#EF553B"
+                                        "color": "#EF553B",
+                                        "symbol": "line-ns-open"
                                     },
                                     "name": "True",
-                                    "notched": true,
                                     "showlegend": false,
                                     "type": "box",
                                     "x": {
@@ -2409,7 +2425,7 @@
                 "    color=\"Scaled\",\n",
                 "    title=\"Distribution of Order Totals: Original vs Standardized\",\n",
                 "    nbins=50,\n",
-                "    marginal=\"box\",\n",
+                "    marginal=\"rug\",\n",
                 "    width=800,\n",
                 ")"
             ]
