--- a/book/math_foundations/lineaire_regressie/gradient_descent.ipynb
+++ b/book/math_foundations/lineaire_regressie/gradient_descent.ipynb
@@ -114,7 +114,7 @@
                         "Initial SSE loss: 183.42 (with guess: 0.73 + -0.78 × order)\n",
                         "Converged.\n",
                         "Performed 8697 iterations.\n",
-                        "Estimated parameters: b1 = $0.00, b2 = 96.9%\n",
+                        "Estimated parameters (Standardized): b1 = $0.00, b2 = 0.97\n",
                         "Final SSE loss: 3.07\n"
                     ]
                 }
@@ -167,7 +167,7 @@
                 "        break\n",
                 "\n",
                 "print(f\"Performed {i + 1} iterations.\")\n",
-                "print(f\"Estimated parameters: b1 = ${b1_history[-1]:.2f}, b2 = {b2_history[-1]:.1%}\")\n",
+                "print(f\"Estimated parameters (Standardized): b1 = ${b1_history[-1]:.2f}, b2 = {b2_history[-1]:.2f}\")\n",
                 "print(f\"Final SSE loss: {loss_history[-1]:.2f}\")"
             ]
         },
