--- a/book/math_foundations/labo/linreg.ipynb
+++ b/book/math_foundations/labo/linreg.ipynb
@@ -518,7 +518,12 @@
     "X_features_scaled = scaler.fit_transform(X_features)\n",
     "\n",
     "# Create design matrix with bias term\n",
-    "X_scaled = np.column_stack([np.ones(X_features_scaled.shape[0]), X_features_scaled])"
+    "X_scaled = np.column_stack([np.ones(X_features_scaled.shape[0]), X_features_scaled])\n",
+    "\n",
+    "# Scale target variable\n",
+    "y_mean = np.mean(y)\n",
+    "y_std = np.std(y)\n",
+    "y_scaled = (y - y_mean) / y_std"
    ]
   },
   {
@@ -659,7 +664,7 @@
    "source": [
     "# Correlation analysis\n",
     "correlation_data = pd.DataFrame(X_features_scaled, columns=[x1, x2])\n",
-    "correlation_data[target] = y\n",
+    "correlation_data[target] = y_scaled\n",
     "\n",
     "# Calculate correlation matrix\n",
     "corr_matrix = correlation_data.corr()\n",
@@ -721,12 +726,12 @@
      "output_type": "stream",
      "text": [
       "Closed-form OLS coefficients:\n",
-      "  β₀ (bias):        2.068558\n",
-      "  β₁ (MedInc):    0.824812\n",
-      "  β₂ (AveRooms): -0.094290\n",
+      "  β₀ (bias):        0.000000\n",
+      "  β₁ (MedInc):    0.714787\n",
+      "  β₂ (AveRooms): -0.081712\n",
       "\n",
       "Model performance:\n",
-      "  MSE:  0.693191\n",
+      "  MSE:  0.520589\n",
       "  R²:   0.479411\n"
      ]
     }
@@ -755,7 +760,7 @@
     "\n",
     "\n",
     "# Calculate coefficients\n",
-    "beta_closed = closed_form_ols(X_scaled, y)\n",
+    "beta_closed = closed_form_ols(X_scaled, y_scaled)\n",
     "\n",
     "print(\"Closed-form OLS coefficients:\")\n",
     "print(f\"  β₀ (bias):        {beta_closed[0]:.6f}\")\n",
@@ -764,8 +769,8 @@
     "\n",
     "# Calculate predictions and metrics\n",
     "y_pred_closed = X_scaled @ beta_closed\n",
-    "mse_closed = mean_squared_error(y, y_pred_closed)\n",
-    "r2_closed = r2_score(y, y_pred_closed)\n",
+    "mse_closed = mean_squared_error(y_scaled, y_pred_closed)\n",
+    "r2_closed = r2_score(y_scaled, y_pred_closed)\n",
     "\n",
     "print(\"\\nModel performance:\")\n",
     "print(f\"  MSE:  {mse_closed:.6f}\")\n",
@@ -795,12 +800,12 @@
      "output_type": "stream",
      "text": [
       "Scikit-learn OLS coefficients:\n",
-      "  β₀ (bias):        2.068558\n",
-      "  β₁ (MedInc):    0.824812\n",
-      "  β₂ (AveRooms): -0.094290\n",
+      "  β₀ (bias):        0.000000\n",
+      "  β₁ (MedInc):    0.714787\n",
+      "  β₂ (AveRooms): -0.081712\n",
       "\n",
       "Model performance:\n",
-      "  MSE:  0.693191\n",
+      "  MSE:  0.520589\n",
       "  R²:   0.479411\n"
      ]
     }
@@ -808,7 +813,7 @@
    "source": [
     "# Scikit-learn LinearRegression\n",
     "lr_sklearn = LinearRegression()\n",
-    "lr_sklearn.fit(X_features_scaled, y)\n",
+    "lr_sklearn.fit(X_features_scaled, y_scaled)\n",
     "\n",
     "# Extract coefficients\n",
     "beta_sklearn = np.array([lr_sklearn.intercept_, *lr_sklearn.coef_])\n",
@@ -820,8 +825,8 @@
     "\n",
     "# Calculate metrics\n",
     "y_pred_sklearn = lr_sklearn.predict(X_features_scaled)\n",
-    "mse_sklearn = mean_squared_error(y, y_pred_sklearn)\n",
-    "r2_sklearn = r2_score(y, y_pred_sklearn)\n",
+    "mse_sklearn = mean_squared_error(y_scaled, y_pred_sklearn)\n",
+    "r2_sklearn = r2_score(y_scaled, y_pred_sklearn)\n",
     "\n",
     "print(\"\\nModel performance:\")\n",
     "print(f\"  MSE:  {mse_sklearn:.6f}\")\n",
@@ -853,23 +858,23 @@
      "output_type": "stream",
      "text": [
       "NumPy lstsq OLS coefficients:\n",
-      "  β₀ (bias):        2.068558\n",
-      "  β₁ (MedInc):    0.824812\n",
-      "  β₂ (AveRooms): -0.094290\n",
+      "  β₀ (bias):        0.000000\n",
+      "  β₁ (MedInc):    0.714787\n",
+      "  β₂ (AveRooms): -0.081712\n",
       "\n",
       "Model performance:\n",
-      "  MSE:  0.693191\n",
+      "  MSE:  0.520589\n",
       "  R²:   0.479411\n",
       "\n",
       "Additional info:\n",
-      "  Residual sum of squares: 14307.454116\n",
+      "  Residual sum of squares: 10744.959552\n",
       "  Rank of design matrix: 3\n"
      ]
     }
    ],
    "source": [
     "# NumPy least squares solution\n",
-    "beta_numpy, residuals, rank, s = np.linalg.lstsq(X_scaled, y, rcond=None)\n",
+    "beta_numpy, residuals, rank, s = np.linalg.lstsq(X_scaled, y_scaled, rcond=None)\n",
     "\n",
     "print(\"NumPy lstsq OLS coefficients:\")\n",
     "print(f\"  β₀ (bias):        {beta_numpy[0]:.6f}\")\n",
@@ -878,8 +883,8 @@
     "\n",
     "# Calculate metrics\n",
     "y_pred_numpy = X_scaled @ beta_numpy\n",
-    "mse_numpy = mean_squared_error(y, y_pred_numpy)\n",
-    "r2_numpy = r2_score(y, y_pred_numpy)\n",
+    "mse_numpy = mean_squared_error(y_scaled, y_pred_numpy)\n",
+    "r2_numpy = r2_score(y_scaled, y_pred_numpy)\n",
     "\n",
     "print(\"\\nModel performance:\")\n",
     "print(f\"  MSE:  {mse_numpy:.6f}\")\n",
@@ -912,9 +917,9 @@
      "output_type": "stream",
      "text": [
       "Statsmodels OLS coefficients:\n",
-      "  β₀ (bias):        2.068558\n",
-      "  β₁ (MedInc):    0.824812\n",
-      "  β₂ (AveRooms): -0.094290\n",
+      "  β₀ (bias):        0.000000\n",
+      "  β₁ (MedInc):    0.714787\n",
+      "  β₂ (AveRooms): -0.081712\n",
       "\n",
       "Full statistical summary:\n",
       "                            OLS Regression Results                            \n",
@@ -922,18 +927,18 @@
       "Dep. Variable:                      y   R-squared:                       0.479\n",
       "Model:                            OLS   Adj. R-squared:                  0.479\n",
       "Method:                 Least Squares   F-statistic:                     9502.\n",
-      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        13:12:59   Log-Likelihood:                -25505.\n",
-      "No. Observations:               20640   AIC:                         5.102e+04\n",
-      "Df Residuals:                   20637   BIC:                         5.104e+04\n",
+      "Date:                Wed, 08 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        20:00:22   Log-Likelihood:                -22550.\n",
+      "No. Observations:               20640   AIC:                         4.511e+04\n",
+      "Df Residuals:                   20637   BIC:                         4.513e+04\n",
       "Df Model:                           2                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const          2.0686      0.006    356.915      0.000       2.057       2.080\n",
-      "x1             0.8248      0.006    134.497      0.000       0.813       0.837\n",
-      "x2            -0.0943      0.006    -15.375      0.000      -0.106      -0.082\n",
+      "const       4.753e-16      0.005   9.46e-14      1.000      -0.010       0.010\n",
+      "x1             0.7148      0.005    134.497      0.000       0.704       0.725\n",
+      "x2            -0.0817      0.005    -15.375      0.000      -0.092      -0.071\n",
       "==============================================================================\n",
       "Omnibus:                     4804.179   Durbin-Watson:                   0.692\n",
       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            12852.863\n",
@@ -948,7 +953,7 @@
    ],
    "source": [
     "# Statsmodels OLS\n",
-    "model_sm = sm.OLS(y, X_scaled)\n",
+    "model_sm = sm.OLS(y_scaled, X_scaled)\n",
     "results_sm = model_sm.fit()\n",
     "\n",
     "# Extract coefficients\n",
@@ -1014,34 +1019,34 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>β₀ (bias)</th>\n",
-       "      <td>2.068558</td>\n",
-       "      <td>2.068558</td>\n",
-       "      <td>2.068558</td>\n",
-       "      <td>2.068558</td>\n",
+       "      <td>2.128384e-16</td>\n",
+       "      <td>1.619548e-16</td>\n",
+       "      <td>1.916492e-16</td>\n",
+       "      <td>4.753142e-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>β₁ (MedInc)</th>\n",
-       "      <td>0.824812</td>\n",
-       "      <td>0.824812</td>\n",
-       "      <td>0.824812</td>\n",
-       "      <td>0.824812</td>\n",
+       "      <td>7.147865e-01</td>\n",
+       "      <td>7.147865e-01</td>\n",
+       "      <td>7.147865e-01</td>\n",
+       "      <td>7.147865e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>β₂ (AveRooms)</th>\n",
-       "      <td>-0.094290</td>\n",
-       "      <td>-0.094290</td>\n",
-       "      <td>-0.094290</td>\n",
-       "      <td>-0.094290</td>\n",
+       "      <td>-8.171217e-02</td>\n",
+       "      <td>-8.171217e-02</td>\n",
+       "      <td>-8.171217e-02</td>\n",
+       "      <td>-8.171217e-02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Closed-form  Scikit-learn  NumPy lstsq  Statsmodels\n",
-       "β₀ (bias)         2.068558      2.068558     2.068558     2.068558\n",
-       "β₁ (MedInc)       0.824812      0.824812     0.824812     0.824812\n",
-       "β₂ (AveRooms)    -0.094290     -0.094290    -0.094290    -0.094290"
+       "                Closed-form  Scikit-learn   NumPy lstsq   Statsmodels\n",
+       "β₀ (bias)      2.128384e-16  1.619548e-16  1.916492e-16  4.753142e-16\n",
+       "β₁ (MedInc)    7.147865e-01  7.147865e-01  7.147865e-01  7.147865e-01\n",
+       "β₂ (AveRooms) -8.171217e-02 -8.171217e-02 -8.171217e-02 -8.171217e-02"
       ]
      },
      "metadata": {},
@@ -1078,24 +1083,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f9f8e19b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Example: f(x) = x² + 3x + 5\n",
-      "Analytical gradient: f'(x) = 2x + 3\n",
-      "\n",
-      "Evaluate at x = 2.0\n",
-      "f(x) = 15.0\n",
-      "Computed gradient f'(x) = 7.0\n",
-      "Analytical gradient at x=2: 2(2) + 3 = 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple example: compute gradient of f(x) = x^2 + 3x + 5\n",
     "print(\"Example: f(x) = x² + 3x + 5\")\n",
@@ -1151,31 +1142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a132361a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Example: f(x, y) = x²y + 3xy²\n",
-      "∂f/∂x = 2xy + 3y²\n",
-      "∂f/∂y = x² + 6xy\n",
-      "\n",
-      "Evaluate at x = 3.0, y = 2.0\n",
-      "f(x, y) = 54.0\n",
-      "\n",
-      "Computed gradients:\n",
-      "  ∂f/∂x = 24.0\n",
-      "  ∂f/∂y = 45.0\n",
-      "\n",
-      "Analytical gradients at x=3, y=2:\n",
-      "  ∂f/∂x = 2(3)(2) + 3(2)² = 24\n",
-      "  ∂f/∂y = (3)² + 6(3)(2) = 45\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example with multiple variables\n",
     "print(\"Example: f(x, y) = x²y + 3xy²\")\n",
