--- a/book/math_foundations/lineaire_regressie/grid.ipynb
+++ b/book/math_foundations/lineaire_regressie/grid.ipynb
@@ -43,15 +43,16 @@
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
-                "$$\n",
-                "e_i \\sim N(0, \\sigma)\n",
-                "$$\n",
-                "\n",
-                "Dit laatste is ons _noise_ model: we gaan ervan uit dat ieder data punt een additieve ruis component heeft\n",
-                "$e_i = y_i - b_1 - b_2*x_i$ met als verwachtte waarde $0$ bij een oneindig aantal observaties:\n",
+                "We gaan ervan uit dat ieder data punt een additieve ruis component heeft:\n",
                 "\n",
                 "$$\n",
-                "E(e_i) = 0\n",
+                "e_i = y_i - b_1 - b_2*x_i\n",
+                "$$\n",
+                "\n",
+                "met als verwachtte waarde $0$ bij een oneindig aantal observaties:\n",
+                "\n",
+                "$$\n",
+                "E(\\pmb{e}) = \\pmb{0}\n",
                 "$$\n",
                 "\n",
                 "Wat impliceert:\n",
@@ -64,14 +65,19 @@
                 "Merk terloops op dat we in dit model ervan uitgaan dat de aankoopprijzen $\\pmb{x}$ zijn wat ze zijn, dus verkregen zijn _zonder_ meetfout.\n",
                 ":::\n",
                 "\n",
-                "Om data te simuleren gebruikten we de volgende waarden voor de parameters:\n",
+                "Om data te simuleren gebruikten we de volgende waarden voor de modelparameters:\n",
                 "\n",
                 "$$\n",
                 "\\begin{align}\n",
                 "b_1 &= 0.50 \\cr\n",
-                "b_2 &= 0.15 \\cr\n",
-                "\\sigma &= 0.30\n",
+                "b_2 &= 0.15\n",
                 "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "De ruis simuleren we door steekproeven te nemen uit een normale (_Gauss_) verdeling met gemiddelde 0 en standaardafwijking $\\sigma=0.30$[^prob]:\n",
+                "\n",
+                "$$\n",
+                "e_i \\sim N(0, 0.30)\n",
                 "$$\n",
                 "  \n",
                 ":::{note} $b_1$, $b_2$ benamingen\n",
