--- a/book/math_foundations/lineaire_regressie/multiple.ipynb
+++ b/book/math_foundations/lineaire_regressie/multiple.ipynb
@@ -1304,62 +1304,66 @@
    "metadata": {},
    "source": [
     "## Gradient descent\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e14129b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f39e51ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def closed_form_ols(X, y):\n",
-    "    \"\"\"\n",
-    "    Compute OLS coefficients using the closed-form solution.\n",
     "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    X : ndarray, shape (n_samples, n_features)\n",
-    "        Design matrix including bias term\n",
-    "    y : ndarray, shape (n_samples,)\n",
-    "        Target vector\n",
+    "De algemene regel voor het stapsgewijze updaten van parameterschattingen blijft ook hier:\n",
     "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    beta : ndarray, shape (n_features,)\n",
-    "        Estimated coefficients\n",
-    "    \"\"\"\n",
-    "    XtX = X.T @ X\n",
-    "    Xty = X.T @ y\n",
-    "    beta = np.linalg.inv(XtX) @ Xty\n",
-    "    return beta\n",
+    "$$\n",
+    "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k)\n",
+    "$$\n",
+    "\n",
+    "Ook nog steeds gebruikmakend van de _SSE loss_, moeten we nu echter op zoek naar de gradient:\n",
+    "\n",
+    "$$\n",
+    "\\nabla J(\\pmb{b}^k) = \\begin{bmatrix}\n",
+    "\\frac{\\partial SSE}{\\partial {b_1}^k} \\cr\n",
+    "\\frac{\\partial SSE}{\\partial {b_2}^k} \\cr\n",
+    "\\frac{\\partial SSE}{\\partial {b_3}^k} \\cr\n",
+    "\\frac{\\partial SSE}{\\partial {b_4}^k}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "### Gradient van $\\frac{\\partial SSE}{\\partial b_1}$\n",
+    "Voor het eerste element krijgen we, gegeven de som-regel:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial SSE}{\\partial b_1} &= \n",
+    "\\sum_{i=1}^M\\frac{\\partial}{\\partial b_1}(y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4})^2\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "In het licht van de kettingregel, krijgen we hier nu te maken de _geneste functies_:\n",
+    "$$\n",
+    "h(b_1, b_2, b_3, b_4) = y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4}\n",
+    "$$\n",
+    "en\n",
+    "$$\n",
+    "g(h(b_1, b_2, b_3, b_4)) = h(b_1, b_2, b_3, b_4)^2 = (y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4})^2\n",
+    "$$\n",
     "\n",
     "\n",
-    "# Calculate coefficients\n",
-    "beta_closed = closed_form_ols(X_scaled, y)\n",
+    "Gezien de kettingregel\n",
     "\n",
-    "print(\"Closed-form OLS coefficients:\")\n",
-    "print(f\"  β₀ (bias):        {beta_closed[0]:.6f}\")\n",
-    "print(f\"  β₁ ({x1}):    {beta_closed[1]:.6f}\")\n",
-    "print(f\"  β₂ ({x2}): {beta_closed[2]:.6f}\")\n",
+    "$$\n",
+    "\\frac{\\partial}{\\partial x}g(h(x)) = \\frac{\\partial g}{\\partial h}\\frac{\\partial h}{\\partial x}\n",
+    "$$\n",
     "\n",
-    "# Calculate predictions and metrics\n",
-    "y_pred_closed = X_scaled @ beta_closed\n",
-    "mse_closed = mean_squared_error(y, y_pred_closed)\n",
-    "r2_closed = r2_score(y, y_pred_closed)\n",
+    "krijgen we[^minus_one]:\n",
     "\n",
-    "print(\"\\nModel performance:\")\n",
-    "print(f\"  MSE:  {mse_closed:.6f}\")\n",
-    "print(f\"  R²:   {r2_closed:.6f}\")"
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial SSE}{\\partial b_1} &=\n",
+    "\\sum_{i=1}^M2(y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4})(-1) \\cr\n",
+    "&=\n",
+    "\\sum_{i=1}^M-2(y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4}) \\cr\n",
+    "&=\n",
+    "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4})\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "[^minus_one]: De term $(-1)$ komt overeen met de afgeleide van $y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4}$ naar $b_1$. Aangezien we bij deze partiële afgeleide $b_2$, $b_3$ en $b_4$ als gegeven beschouwen (en $y_i$, $x_{i,2}$, $x_{i,3}$ en $x_{i,4}$ sowieso gegeven zijn), kunnen we de binnenste functie herschrijven als $h(b_1) = -b1 + c$. Geometrisch komt dit overeen met een rechte met _slope_ $-1$.\n",
+    "\n",
+    "### Gradient van $\\frac{\\partial SSE}{\\partial b_2}$"
    ]
   }
  ],
