multiple reg ready

--- a/book/math_foundations/labo/linreg.ipynb
+++ b/book/math_foundations/labo/linreg.ipynb
@@ -1076,7 +1076,7 @@
    "source": [
     "## Automatische differentiatie\n",
     "\n",
-    "PyTorch's automatische differentiatie `autograd` berekent gradiënten automatisch via de chain rule. De bibliotheek is voornamelijk bedoeld voor gebruik bij neurale netwerken, maar hier kunnen we er al een eerste keer gebruik van maken om _gradient descent_ te implementeren voor ons lineaire regressiemodel.\n",
+    "PyTorch's automatische differentiatie `autograd` berekent gradiënten automatisch. De bibliotheek is voornamelijk bedoeld voor gebruik bij neurale netwerken, maar hier kunnen we er al een eerste keer gebruik van maken om _gradient descent_ te implementeren voor ons lineaire regressiemodel.\n",
     "\n",
     "Hieronder eerst een demonstratie met een eenvoudig voorbeeld."
    ]
