--- a/book/math_foundations/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/lineaire_regressie/gradient.ipynb
@@ -236,20 +236,22 @@
     "\\frac{\\partial}{\\partial x}g(h(x)) = \\frac{\\partial g}{\\partial h}\\frac{\\partial h}{\\partial x}\n",
     "$$\n",
     "\n",
-    "Voor ons betekent dit:\n",
+    "Voor de afgeleide van de buitenste functie krijgen we (zie afgeleide van kwadratische functie):\n",
     "\n",
     "$$\n",
-    "\\begin{aligned}\n",
-    "\\frac{\\partial SSE}{\\partial b_1} &=\n",
-    "\\sum_{i=1}^M2(y_i - b_1 - b_2x_i)(-1) \\cr\n",
-    "&=\n",
-    "\\sum_{i=1}^M-2(y_i - b_1 - b_2x_i) \\cr\n",
-    "&=\n",
-    "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_i)\n",
-    "\\end{aligned}\n",
+    "\\frac{\\partial g}{\\partial h} = 2(y_i - b_1 - b_2x_i)\n",
     "$$\n",
     "\n",
-    "De term $(-1)$ komt overeen met de afgeleide van $y_i - b_1 - b_2x_i$ naar $b_1$. Aangezien we bij deze partiële afgeleide $b_2$ als gegeven beschouwen (en $y_i$ en $x_i$ sowieso gegeven zijn), kunnen we de binnenste functie herschrijven als $h(b_1) = -b1 + c$. Geometrisch komt dit overeen met een rechte met _slope_ $-1$."
+    "Voor de binnenste afgeleide kunnen we de functie $y_i - b_1 - b_2x_i$ eerst vereenvoudigen naar $c - b_1$. Dit is mogelijk omdat $y_i$ en $x_i$ gekend zijn en we $b_2$ in deze partiële afgeleide als constant beschouwen. We kunnen de termen $y_i - b_2x_i$ voorstellen als een gegeven constante $c$. Zo krijgen we\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\frac{\\partial h}{\\partial x} &= \\frac{\\partial}{\\partial b_1}(c - b_1) \\cr\n",
+    "&= -1\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Als we $c - b_1$ geometrisch voorstellen krijgen we namelijk een rechte met $-1$ als richtingscoëfficiënt (dus de afgeleide is ook $-1$):"
    ]
   },
   {
@@ -320,6 +322,25 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a984d2a4",
+   "metadata": {},
+   "source": [
+    "Als we de ketting regel (dus het product van $\\frac{\\partial g}{\\partial h}$ en $\\frac{\\partial h}{\\partial x}$) volledig toepassen krijgen we:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial SSE}{\\partial b_1} &=\n",
+    "\\sum_{i=1}^M2(y_i - b_1 - b_2x_i)(-1) \\cr\n",
+    "&=\n",
+    "\\sum_{i=1}^M-2(y_i - b_1 - b_2x_i) \\cr\n",
+    "&=\n",
+    "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_i)\n",
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
@@ -424,7 +445,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "en zoeken we de oplossing voor:\n",
+    "en zoeken we de oplossing voor de waarden $b_1$ en $b_2$ waarbij de helling in het SSE oppervlak $\\pmb{0}$ is:\n",
     "\n",
     "$$\n",
     "\\begin{bmatrix}\n",
