--- a/book/math_foundations/lineaire_regressie/multiple.ipynb
+++ b/book/math_foundations/lineaire_regressie/multiple.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Multiple regressie\n",
     "\n",
-    "Tot nu toe hebben gewerkt met een simpel lineair regressiemodel met maar één _predictor_ of _feature_ $\\pmb{x}$ om de target waarden $\\pmb{y}$ te voorspellen.\n",
+    "Tot nu toe hebben we gewerkt met een simpel lineair regressiemodel met maar één _predictor_ of _feature_ $\\pmb{x}$ om de target waarden $\\pmb{y}$ te voorspellen.\n",
     "In het algemene geval $\\pmb{y}=\\pmb{X}\\pmb{b}+\\pmb{e}$, kunnen we de voorspellingen echter koppelen aan meerdere features in de _design- of feature-matrix_ $\\pmb{X}$. Hier illustreren we de _OLS_ en _gradient descent_ oplossing in het geval waarbij we drie features hebben.\n",
     "  \n",
     "## Data simulatie\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "be9478f6",
    "metadata": {},
    "outputs": [],
@@ -63,6 +63,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
+    "import torch\n",
     "from plotly.subplots import make_subplots\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
@@ -1202,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "23d6d50b",
    "metadata": {},
    "outputs": [],
@@ -1234,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "70fb11d4",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "aa3bcc98",
    "metadata": {},
    "outputs": [
@@ -1311,10 +1312,10 @@
     "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k)\n",
     "$$\n",
     "\n",
-    "Ook nog steeds gebruikmakend van de _SSE loss_, moeten we nu echter op zoek naar de gradient:\n",
+    "Nog steeds gebruikmakend van de _SSE loss_, moeten we nu op zoek naar de gradient:\n",
     "\n",
     "$$\n",
-    "\\nabla J(\\pmb{b}^k) = \\begin{bmatrix}\n",
+    "\\nabla{SSE} = \\begin{bmatrix}\n",
     "\\frac{\\partial SSE}{\\partial {b_1}^k} \\cr\n",
     "\\frac{\\partial SSE}{\\partial {b_2}^k} \\cr\n",
     "\\frac{\\partial SSE}{\\partial {b_3}^k} \\cr\n",
@@ -1322,48 +1323,137 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "### Gradient van $\\frac{\\partial SSE}{\\partial b_1}$\n",
-    "Voor het eerste element krijgen we, gegeven de som-regel:\n",
+    "In de sectie over de _SSE gradient_ zagen we dat in het algemene geval van $N$ features, de gradient volgende vorm heeft:\n",
     "\n",
     "$$\n",
-    "\\begin{aligned}\n",
-    "\\frac{\\partial SSE}{\\partial b_1} &= \n",
-    "\\sum_{i=1}^M\\frac{\\partial}{\\partial b_1}(y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4})^2\n",
-    "\\end{aligned}\n",
+    "\\nabla{SSE} = \\begin{bmatrix}\n",
+    "-2\\sum_{i=1}^M(y_i - \\sum_{j=1}^Nx_{ij}b_j)(x_{i,1}) \\cr\n",
+    "-2\\sum_{i=1}^M(y_i - \\sum_{j=1}^Nx_{ij}b_j)(x_{i,2}) \\cr\n",
+    "\\vdots \\cr\n",
+    "-2\\sum_{i=1}^M(y_i - \\sum_{j=1}^Nx_{ij}b_j)(x_{i,n})\n",
+    "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "In het licht van de kettingregel, krijgen we hier nu te maken de _geneste functies_:\n",
-    "$$\n",
-    "h(b_1, b_2, b_3, b_4) = y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4}\n",
-    "$$\n",
-    "en\n",
-    "$$\n",
-    "g(h(b_1, b_2, b_3, b_4)) = h(b_1, b_2, b_3, b_4)^2 = (y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4})^2\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "Gezien de kettingregel\n",
+    "In matrix notatie kunnen we dit efficiënt reduceren tot:\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial}{\\partial x}g(h(x)) = \\frac{\\partial g}{\\partial h}\\frac{\\partial h}{\\partial x}\n",
+    "\\nabla{SSE} = -2\\pmb{X}^T(\\pmb{y} - \\pmb{\\hat{y}})\n",
     "$$\n",
     "\n",
-    "krijgen we[^minus_one]:\n",
+    "Dit kunnen we als volgt implementeren."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7d97176a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sse_gradient(X, y, b):\n",
+    "    \"\"\"Compute the gradient of the SSE loss with respect to parameters b.\"\"\"\n",
+    "    y_pred = X @ b\n",
+    "    residuals = y - y_pred\n",
+    "    gradient = -2 * X.T @ residuals\n",
+    "    return gradient\n",
     "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "\\frac{\\partial SSE}{\\partial b_1} &=\n",
-    "\\sum_{i=1}^M2(y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4})(-1) \\cr\n",
-    "&=\n",
-    "\\sum_{i=1}^M-2(y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4}) \\cr\n",
-    "&=\n",
-    "-2\\sum_{i=1}^M(y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4})\n",
-    "\\end{aligned}\n",
-    "$$\n",
     "\n",
-    "[^minus_one]: De term $(-1)$ komt overeen met de afgeleide van $y_i - b_1 - b_2x_{i,2} - b_3x_{i,3} - b_4x_{i,4}$ naar $b_1$. Aangezien we bij deze partiële afgeleide $b_2$, $b_3$ en $b_4$ als gegeven beschouwen (en $y_i$, $x_{i,2}$, $x_{i,3}$ en $x_{i,4}$ sowieso gegeven zijn), kunnen we de binnenste functie herschrijven als $h(b_1) = -b1 + c$. Geometrisch komt dit overeen met een rechte met _slope_ $-1$.\n",
+    "def loss_fn(X, y, b):\n",
+    "    \"\"\"Compute the loss (SSE) given the input features, target values, and model parameters.\"\"\"\n",
+    "    y_pred = X @ b\n",
+    "    residuals = y - y_pred\n",
+    "    return np.sum(residuals**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7332383b",
+   "metadata": {},
+   "source": [
+    "Voor gradient descent beginnen we steeds met een _educated guess_ voor de parameters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1f8b8065",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration    1: loss = 124.023166\n",
+      "Iteration 1001: loss = 19.097274\n",
+      "Iteration 2001: loss = 4.451616\n",
+      "Iteration 2001: loss = 4.451616\n",
+      "Iteration 3001: loss = 2.394629\n",
+      "Iteration 4001: loss = 2.103591\n",
+      "Iteration 3001: loss = 2.394629\n",
+      "Iteration 4001: loss = 2.103591\n",
+      "Iteration 5001: loss = 2.062057\n",
+      "Iteration 6001: loss = 2.056071\n",
+      "Iteration 5001: loss = 2.062057\n",
+      "Iteration 6001: loss = 2.056071\n",
+      "Iteration 7001: loss = 2.055198\n",
+      "Iteration 8001: loss = 2.055069\n",
+      "Iteration 7001: loss = 2.055198\n",
+      "Iteration 8001: loss = 2.055069\n",
+      "Iteration 9001: loss = 2.055050\n",
+      "Iteration 10000: loss = 2.055047\n",
+      "\n",
+      "Gradient descent coefficients:\n",
+      "  β1 (bias): \t\t0.000045\tols value: 0.000000\ttrue value: -0.012221\n",
+      "  β2 (Order Total): \t0.666576\tols value: 0.666591\ttrue value: 0.646223\n",
+      "  β3 (Age): \t\t0.636378\tols value: 0.636319\ttrue value: 0.635362\n",
+      "  β4 (Rain): \t\t-0.114291\tols value: -0.114367\ttrue value: -0.115728\n",
+      "Iteration 9001: loss = 2.055050\n",
+      "Iteration 10000: loss = 2.055047\n",
+      "\n",
+      "Gradient descent coefficients:\n",
+      "  β1 (bias): \t\t0.000045\tols value: 0.000000\ttrue value: -0.012221\n",
+      "  β2 (Order Total): \t0.666576\tols value: 0.666591\ttrue value: 0.646223\n",
+      "  β3 (Age): \t\t0.636378\tols value: 0.636319\ttrue value: 0.635362\n",
+      "  β4 (Rain): \t\t-0.114291\tols value: -0.114367\ttrue value: -0.115728\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initial coefficients\n",
+    "b = np.array([1.0, 1.0, 1.0, 1.0])\n",
     "\n",
-    "### Gradient van $\\frac{\\partial SSE}{\\partial b_2}$"
+    "# Initial loss\n",
+    "loss_history = [loss_fn(X_scaled, y_scaled, b)]\n",
+    "\n",
+    "# Learning rate\n",
+    "lr = 1e-5\n",
+    "\n",
+    "# Number of iterations\n",
+    "n_iter = 10000\n",
+    "\n",
+    "for i in range(n_iter):\n",
+    "    grad = sse_gradient(X_scaled, y_scaled, b)\n",
+    "    b -= lr * grad\n",
+    "    loss = loss_fn(X_scaled, y_scaled, b)\n",
+    "    loss_history.append(loss)\n",
+    "    if i % 1000 == 0 or i == n_iter - 1:\n",
+    "        print(f\"Iteration {i + 1:4d}: loss = {loss:.6f}\")\n",
+    "\n",
+    "print(\"\\nGradient descent coefficients:\")\n",
+    "print(f\"  β1 (bias): \\t\\t{b[0]:.6f}\\tols value: {beta[0]:.6f}\\ttrue value: {b1_scaled:.6f}\")\n",
+    "print(f\"  β2 (Order Total): \\t{b[1]:.6f}\\tols value: {beta[1]:.6f}\\ttrue value: {b2_scaled:.6f}\")\n",
+    "print(f\"  β3 (Age): \\t\\t{b[2]:.6f}\\tols value: {beta[2]:.6f}\\ttrue value: {b3_scaled:.6f}\")\n",
+    "print(f\"  β4 (Rain): \\t\\t{b[3]:.6f}\\tols value: {beta[3]:.6f}\\ttrue value: {b4_scaled:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "281c5b73",
+   "metadata": {},
+   "source": [
+    ":::{info} Automatische gradients\n",
+    "Bij complexere _loss functies_ en modellen (bijvoorbeeld diepe neurale netwerken) kunnen we bij de implementatie gebruik maken van tools om automatische differentiatie te doen zoals `autograd` in PyTorch.\n",
+    ":::"
    ]
   }
  ],
